plonetheme/nuplone/skin/templates/style/main/base.css
/* ... */
.navigation .current em.icon {
	background-color: #515151;
}

.navigation .current a:hover {
	color: black;
}



/* @end */

/* @group Floats */

.floatBefore {
	float: left;
}

.floatAfter {
	float: right;
}

img.floatBefore {
	margin-right: 10px;
}

img.floatAfter {
	margin-left: 10px;
}



/* @end */

/* @group Site menu
 */

iframe#siteMenu,
object#siteMenu {
	position: absolute;
	top: 0;
	right: 0;
	border-style: none;
	height: 30px;
	overflow: hidden;
	width: 500px;
	z-index: 2000;
	background-color: transparent;
}

ul#siteMenu
 {
	position: absolute;
	top: 0;
	right: 10px;
	list-style-type: none;
	font-size: 10px;
}

body.siteMenu {
	overflow: hidden;
	background-color: transparent;
}

ul#siteMenu li
 {
	float: right;
	color: black;
}

ul#siteMenu > li > a
 {
	text-decoration: none;
	color: white;
	padding: 3px 7px;
	display: inline-block;
	position: relative;
	background: url(siteMenu-top.png) no-repeat center 22px;
	height: 25px;
	z-index: 11;
	-webkit-transition: all 0.3s;
}

ul#siteMenu > li:hover > a {
	background-position: center 12px;
}

ul#siteMenu li a:hover {
	text-decoration: underline;
}

ul#siteMenu li#user a {
}

/* @group Submenu */

ul#siteMenu > li > ul {
	visibility: hidden;
	position: absolute;
	top: 30px;
	right: 8px;
	list-style-type: none;
	margin: 0;
	display: block;
	padding: 0;
	width: 100%;
	-webkit-box-shadow: 0 0 15px rgba(0,0,0,0.3);
	-moz-box-shadow: 0 0 15px rgba(0,0,0,0.3);
	-o-box-shadow: 0 0 15px rgba(0,0,0,0.3);
	box-shadow: 0 0 15px rgba(0,0,0,0.3);
	background-color: #eee;
	border: 1px solid silver;
}

ul#siteMenu > li > ul > li {
	padding: 10px;
	clear: left;
	display: block;
	float: none;
	font-weight: bold;
}

ul#siteMenu > li > ul > li ul {
	margin: 0 -10px;
	padding: 0;
}

ul#siteMenu > li > ul > li ul li {
	list-style-type: none;
	float: none;
}

ul#siteMenu > li > ul > li ul li a {
	display: block;
	color: gray;
	font-weight: normal;
	font-style: normal;
	padding-left: 10px;
	padding-right: 10px;
}

ul#siteMenu > li > ul > li ul li a:hover {
	color: #515151;
	background-color: #dbdbdb;
	text-decoration: none;
}

ul#siteMenu li.open ul {
	visibility: visible;
	z-index: 10;
}



/* @end */

/* @group Style help */

/*iframe#siteMenu {
	height: 100%;
}

ul#siteMenu li ul {
	visibility: visible;
}*/

/* @end */



/* @end */

/* @group Typography */

p {
	margin-bottom: 20px;
	margin-top: 0;
}

a {
	color: #179cd8;
}

a:hover {
	color: #1286bb;
}

/* @group Headings */

h1 {
	font-size: 25px;
	line-height: 30px;
	font-weight: normal;
	font-style: normal;
	letter-spacing: 1px;
	margin-bottom: 20px;
	margin-top: -55px;
}

.floatingPanel-modal h1 {
	font-size: 17px;
	counter-increment: section;
	counter-reset: subsection;
	font-weight: bold;
	margin-bottom: 20px;
	height: auto;
	min-height: 0;
	width: auto;
	padding: 0;
	margin-top: 0;
}

h2 {
	font-size: 17px;
	counter-increment: section;
	counter-reset: subsection;
	margin-bottom: 20px;
	font-weight: normal;
	margin-top: 0;
	clear: left;
}

h3 {
	font-size: 12px;
	line-height: 20px;
	text-transform: uppercase;
	letter-spacing: 5px;
	margin-bottom: 20px;
	font-weight: bold;
	margin-top: 0;
}

h4 {
	font-size: 12px;
	line-height: 20px;
	text-transform: uppercase;
	letter-spacing: 5px;
	margin-bottom: 6px;
	margin-top: 0;
}

h5 {
	font-size: 12px;
	line-height: 20px;
	margin-bottom: 4px;
	min-height: 1.25em;
	font-weight: bold;
	margin-top: 0;
}

h1 img, h2 img, h3 img, 
h4 img, h5 img, h6 img {
	margin: 0;
}

/* @end */

/* @group Text Elements */

p {
	margin: 0 0 20px;
}

.introduction * {
	font-weight: bold;
}

.discrete,
.discrete * {
	font-size: 10px;
	font-style: italic;
	color: gray;
}

.discrete a {
	color: #00a1e0;
}

.discrete a:hover {
	text-decoration: underline;
}

p.byline {
	margin-top: -16px;
	margin-bottom: 14px;
}

p img.right {
	float: right;
	margin: 1.5em 0 1.5em 1.5em;
}

a:focus, 
a:hover {
	color: #007fb1;
	text-decoration: underline;
}

a {
	color: #00a1e0;
	text-decoration: none;
	cursor: pointer;
}

a.external-link:before {
	content: "";
	display: inline-block;
	width: 16px;
	height: 16px;
	margin-bottom: -4px;
	margin-top: -4px;
	background: #217efb url(icons.png) -1071px 0;
	border-right: 2px solid white;
}

a.external-link:hover:before {
	background-color: #007fb1;
}

a.state-draft {
	color: #ff8100;
}

a.state-draft:hover {
	color: #c26106;
}

a * {
	cursor: pointer;
}

blockquote {
	margin: 1.5em;
	color: #8e8e8e;
	letter-spacing: 1px;
	font: italic normal 20px/30px Georgia, "Times New Roman", Times, serif;
	text-align: center;
}

blockquote:before {
	content: "“";
	font-size: 310px;
	z-index: 0;
	color: #efeeef;
	width: 70px;
	margin: 102px -40px -120px;
	float: left;
}

#mainContent blockquote:before {
	font-size: 240px;
	margin-top: 64px;
	margin-left: -33px;
}

strong {
	font-weight: bold;
}

em,dfn {
	font-style: italic;
}

dfn {
	font-weight: bold;
}

sup, sub {
	line-height: 0;
	letter-spacing: 0;
}

h1 sup {
	font-size: 14px;
	letter-spacing: 0;
	color: gray;
	font-weight: normal;
	font-style: normal;
}

h3 sup {
	font-size: 8px;
	letter-spacing: 0;
	color: gray;
}

abbr, 
acronym {
	border-bottom: 1px dotted #666;
}

address {
	margin: 0 0 1.5em;
	font-style: italic;
}

del {
	color: #666;
}

pre {
	background-color: #efefef;
	display: block;
	overflow: auto;
	-webkit-box-shadow: 0 2px 10px rgba(0,0,0,0.35);
	-moz-box-shadow: 0 2px 10px rgba(0,0,0,0.35);
	box-shadow: 0 2px 10px rgba(0,0,0,0.35);
	padding: 10px;
	margin-bottom: 20px;
}

pre,code {	
	white-space: pre;
	background-color: #efefef;
}

pre,code,tt {
	font: 13px 'andale mono', 'lucida console', monospace;
}

code {
	padding: 3px;
	margin: -3px;
	color: #515151 !important;
	text-shadow: white 0 1px 0;
	background-color: #e0e0e0;
	font-style: normal !important;
}

em.unknown {
	color: silver;
	font-weight: normal;
}

/* @end */

/* @group Lists */

li ul, 
li ol {
	margin: 0 0 0 20px;
}

ul, ol {
	margin-top: 0;
	margin-bottom: 20px;
	margin-left: 0;
	padding-left: 40px;
}
/* ... */

